# ollama_updater

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ollama_updater/: __init__.py  main.py
tests/: test_main.py
