[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-updater"
version = "0.1.0"
description = "A utility to update all installed Ollama models."
requires-python = ">=3.7"
authors = [
    {name = "Robert Wallace", email = "rwallace@silentcastle.net"},
]
dependencies = [
    "rich>=13.9.0",
    "typer>=0.12.0"
]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ollama-updater = "ollama_updater.main:app"

[project.entry-points."pipx.register_exit_code_handling"]
ollama-updater = "ollama_updater.main:app"

# Add this section for development dependencies
[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

# Add these tool configurations
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_loop_scope = "function"  # Add this line
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py37"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.coverage.run]
source = ["ollama_updater"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
fail_under = 80